# test_install_package

./: README.md  install_from_github.py  pyproject.toml  requirements.txt  setup.py  vct_v_geom-1.0.0-py3-none-any.whl
.github/workflows/: build_wheel.yml  package_access.yml  print_msg.yml  publish_py_package.yml
sample_calculator/: calculator.py
wheel/: my_package-0.1.0-py3-none-any.whl
wheelhouse/: cramjam-2.7.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  fastparquet-2023.10.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  msoffcrypto_tool-5.1.1-py3-none-any.whl  olefile-0.46-py2.py3-none-any.whl
