[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "simple_calculator"
version = "2.0.0"
description = "A simple calculator class with basic arithmetic operations"
authors = ["Your Name <your@email.com>"]
license = "MIT"
homepage = "https://github.com/your_username/simple_calculator"

[project]
python = "^3.9"
pytest = "^6.2.4"
