[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "simple_calculator"
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "project"
version = "0.0.1"
authors = [
  { name="your_name", email="your_email" },
]
description = "Sample project "
readme = "README.md"
requires-python = ">=3.8"
